[package]
name = "p2panda-spike"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
ciborium = "0.2.2"
p2panda-core = "0.1.0"
p2panda-discovery = "0.1.0"
p2panda-net = "0.1.0"
p2panda-sync = "0.1.0"
rand = "0.8.5"
serde = "1.0.215"
tokio = "1.42.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
